@@ -1,3 +1,7 @@
+2011-01-21  Steffen Gebert  <steffen@steffen-gebert.de>
+
+	* Fixed bug #17167: Cache ExtDirect::getAPI calls
+
 2011-01-21  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #17140: htmlArea RTE: In WebKit, RTE inserts incorrect link if text is double-clicked
